--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,14 +2,15 @@
 GameName=EarthProjectZero
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/ThirdPersonBP/Maps/Empty.Empty
-GameDefaultMap=/Game/ThirdPersonBP/Maps/Empty.Empty
+EditorStartupMap=/Game/ThirdPersonBP/Maps/Map_MainMenu.Map_MainMenu
+GameDefaultMap=/Game/ThirdPersonBP/Maps/Map_MainMenu.Map_MainMenu
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GlobalDefaultGameMode=/Game/ThirdPersonBP/Blueprints/ThirdPersonGameMode.ThirdPersonGameMode_C
 GlobalDefaultServerGameMode=None
+GameInstanceClass=/Game/ThirdPersonBP/Blueprints/CustomGameInstance.CustomGameInstance_C
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_11
