--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,7 +1,11 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=57D72CA440E21B5A4BF84B9546F818F8
-ProjectName=Third Person BP Game Template
+ProjectName=Anthropy
 
 [StartupActions]
 bAddPacks=True
 InsertPack=(PackSource="StarterContent.upack",PackName="StarterContent")
+
+[/Script/UnrealEd.ProjectPackagingSettings]
+FullRebuild=True
+
